Fixed real time chat and feedbacks
